assets/page.css
a.home {
  text-decoration: none;
  color: hsl(var(--accent-hue) var(--accent-saturation) var(--foreground-lightness));

}

.anchors-row {
  display: flex;
  gap: var(--scale-6);
  margin-block: var(--scale-6);

  &:first-child {
    margin-block-start: 0
  }

  &:last-child {
    margin-block-end: 0
  }
}

.spacing-row {
  display: flex;
  margin-block: var(--scale-4);
}

.spacing-label {
  padding: var(--scale-4) var(--scale-5);
  width: 8rem;
  text-align: end;
}

.spacing-box {
  background: hsl(var(--accent-hue) var(--accent-saturation) var(--lightness-2));
  border: thin solid hsl(var(--accent-hue) var(--accent-saturation) var(--lightness-4));
  display: inline-block;
  height: var(--scale-5);
}

.buttons-row {
  display: flex;
  gap: var(--scale-6);
  margin-block: var(--scale-6);

  &:first-child {
    margin-block-start: 0
  }

  &:last-child {
    margin-block-end: 0
  }
}

.color-grid {
  display: inline-grid;
  grid-template-columns: repeat(var(--columns), 1fr);
  grid-auto-rows: calc(var(--scale-13) / 12 - var(--scale-3));
  gap: var(--scale-3);
  width: 100%;
  margin-block: var(--scale-4) var(--scale-7);
}

.color-grid+.color-grid {
  margin-block-start: var(--scale-7)
}

.color-grid-header {
  display: flex;
  align-items: center;
  justify-content: center;
}

.color-sample {
  background: hsl(var(--hue) var(--saturation) var(--lightness));
  border: none;
  display: block;
  border-radius: var(--scale-2);
}

#color-range,
#saturation-range {
  width: 100%;
}

label:has(#saturation-range, #color-range) {
  position: relative;

  &::after {
    content: attr(data-value);
    display: block;
    position: absolute;
    inset-inline-end: 0;
    inset-block-start: 0;
  }
}

#color-range {
  background: linear-gradient(to right,
      hsl(0 var(--accent-saturation) 50%),
      hsl(20 var(--accent-saturation) 50%),
      hsl(30 var(--accent-saturation) 50%),
      hsl(40 var(--accent-saturation) 50%),
      hsl(50 var(--accent-saturation) 50%),
      hsl(60 var(--accent-saturation) 50%),
      hsl(70 var(--accent-saturation) 50%),
      hsl(80 var(--accent-saturation) 50%),
      hsl(90 var(--accent-saturation) 50%),
      hsl(100 var(--accent-saturation) 50%),
      hsl(110 var(--accent-saturation) 50%),
      hsl(120 var(--accent-saturation) 50%),
      hsl(130 var(--accent-saturation) 50%),
      hsl(140 var(--accent-saturation) 50%),
      hsl(150 var(--accent-saturation) 50%),
      hsl(160 var(--accent-saturation) 50%),
      hsl(170 var(--accent-saturation) 50%),
      hsl(180 var(--accent-saturation) 50%),
      hsl(190 var(--accent-saturation) 50%),
      hsl(200 var(--accent-saturation) 50%),
      hsl(210 var(--accent-saturation) 50%),
      hsl(220 var(--accent-saturation) 50%),
      hsl(230 var(--accent-saturation) 50%),
      hsl(240 var(--accent-saturation) 50%),
      hsl(250 var(--accent-saturation) 50%),
      hsl(260 var(--accent-saturation) 50%),
      hsl(270 var(--accent-saturation) 50%),
      hsl(280 var(--accent-saturation) 50%),
      hsl(290 var(--accent-saturation) 50%),
      hsl(300 var(--accent-saturation) 50%),
      hsl(310 var(--accent-saturation) 50%),
      hsl(320 var(--accent-saturation) 50%),
      hsl(330 var(--accent-saturation) 50%),
      hsl(340 var(--accent-saturation) 50%),
      hsl(350 var(--accent-saturation) 50%),
      hsl(360 var(--accent-saturation) 50%));
}

.example {
  margin-block: var(--scale-7);

  &:first-child {
    margin-block-start: 0;
  }

  &:last-child {
    margin-block-end: 0;
  }
}

.example .card+.accordion {
  margin-block-start: var(--scale-3);
}

.example .card:has(+.accordion) {
  margin-block-end: var(--scale-3);
}

.example .grid {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  gap: var(--scale-4);
  justify-items: center;
}

.example .grid.stretch {
  justify-items: stretch;
}

.example .rows {
  display: grid;
  grid-template-columns: 1fr;
  gap: var(--scale-4);
  justify-items: stretch;
}

.example .rows:has(.grid) {
  gap: var(--scale-5);
}

details.source pre {
  padding: var(--scale-2) var(--scale-3);
  margin: 0;
  overflow-x: auto;
  scrollbar-color: hsl(var(--neutral-hue) var(--neutral-saturation) 70% / 50%) transparent;
  scrollbar-width: thin;

  &:focus-within {
    scrollbar-color: hsl(var(--neutral-hue) var(--neutral-saturation) 100% / 70%) transparent;
  }

  &>code {
    transition: scrollbar-color 0.2s ease-in-out;
    padding: 0;
    border: none;
    border-radius: 0;
    overflow-x: visible;

  }
}

@media (max-width: 600px) {
  .example .grid:not(.small) {
    grid-template-columns: 1fr;
    justify-items: stretch;
  }
}

@media (max-width: 1200px) {
  .color-grid {
    gap: 0;
  }

  .color-sample {
    border-radius: 0;
  }
}

